--- a/firebase.json
+++ b/firebase.json
@@ -2,15 +2,15 @@
   "hosting": {
     "site": "deutscher-finanzservice",
     "public": ".",
-    "ignore": ["firebase.json", ".firebaserc", "**/.*", "**/node_modules/**"],
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "headers": [
-      { "source": "index.html", "headers": [{ "key": "Cache-Control", "value": "no-cache, no-store, must-revalidate" }]},
-      { "source": "**/*.html", "headers": [{ "key": "Cache-Control", "value": "no-cache" }]},
-      { "source": "assets/**", "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }]},
-      { "source": "styles/**", "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }]},
-      { "source": "scripts/**", "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }]},
-      { "source": "favicon.ico", "headers": [{ "key": "Cache-Control", "value": "public, max-age=0" }]}
-    ]
+      { "source": "index.html", "headers": [{ "key": "Cache-Control", "value": "no-cache, no-store, must-revalidate" }] },
+      { "source": "assets/**",    "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }] },
+      { "source": "styles/**",    "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }] },
+      { "source": "scripts/**",   "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }] },
+      { "source": "favicon.ico",  "headers": [{ "key": "Cache-Control", "value": "public, max-age=86400" }] }
+    ],
+    "rewrites": [{ "source": "**", "destination": "/index.html" }]
   }
 }
 
